--- a/HN-FUEL/Test.html
+++ b/HN-FUEL/Test.html
@@ -21,7 +21,7 @@
   <div class="hd">
     <div class="level">
       <i class="fa fa-map-marker"></i>
-      <p class="lev_tit" id="reporttitle">燃料供应 > 计划分析</p>
+      <p class="lev_tit" id="reporttitle"></p>
     </div>
     <div class="param">
       <div name="group" id="p_group">
